GRPC/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
spec:
  selector:
    app: grpc
  ports:
    - port: 8000
      targetPort: 8000
  type: LoadBalancer
